fixed a graphical bug on mobile that arose while a attempting to fix a different one

--- a/map/theme.css
+++ b/map/theme.css
@@ -15,8 +15,6 @@ body {
 	font-family: pixel;
 	margin: 0;
 	overflow: hidden;
-	width: 100%;
-	height: 100vh;
 }
 input {
 	font-family: pixel;
